--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -338,14 +338,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note VOCAB_SIZE as a hyper-parameter. Next we create the Encoder layer that will encode every word in vocabulary as a vector."
+    "#### Define the Encoder layer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Define the Encoder layer"
+    "Note VOCAB_SIZE is a hyper-parameter. This layer will encode the input text as a sequence of integers indicating their indices in the vocabulary."
    ]
   },
   {
@@ -357,38 +357,8 @@
    "outputs": [],
    "source": [
     "VOCAB_SIZE = 2000\n",
-    "encoder = tf.keras.layers.TextVectorization(\n",
-    "    max_tokens=VOCAB_SIZE)\n",
+    "encoder = tf.keras.layers.TextVectorization(max_tokens=VOCAB_SIZE)\n",
     "encoder.adapt(training_dataset.map(lambda text, label: text))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "mVJxYguQA1v5",
-    "outputId": "6d09aa12-53b6-4704-b474-2b1713ad1ffb"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['', '[UNK]', '’', '“', '”', 'the', 'trump', 'i', 'said', 's',\n",
-       "       'clinton', 'state', 'would', 'us', 'one', 'peopl', 'new', 'presid',\n",
-       "       'it', 'republican'], dtype='<U13')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vocab = np.array(encoder.get_vocabulary())\n",
-    "vocab[:20]"
    ]
   },
   {
@@ -446,7 +416,6 @@
     "    tf.keras.layers.Embedding(\n",
     "        input_dim=len(encoder.get_vocabulary()),\n",
     "        output_dim=64,\n",
-    "        # Use masking to handle the variable sequence lengths\n",
     "        mask_zero=True),\n",
     "    tf.keras.layers.LSTM(64),\n",
     "    tf.keras.layers.Dense(64, activation='relu'),\n",
@@ -458,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trying out a sample text on untrained model"
+    "Trying out a sample text on untrained model."
    ]
   },
   {
@@ -709,7 +678,7 @@
     "import pickle\n",
     "with open('outputs/LSTM_results_with_preprocessing.pkl', 'wb') as fout:\n",
     "    pickle.dump(results, fout)\n",
-    "print(f'No Preprocessing-----------\\nTest accuracy: {accuracy}\\nTest loss: {loss}\\nTest F1-score:{f1_score}')"
+    "print(f'Test accuracy: {accuracy}\\nTest loss: {loss}\\nTest F1-score:{f1_score}')"
    ]
   }
  ],
@@ -719,9 +688,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Tensorflow 2.8.0/Keras Py3.9",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tensorflow-2.8.0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -733,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
